backend/hotelflow_server/bridge/base/0-hotelflow-server-namespace.yaml
#! 0-hotelflow-server-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: hotelflow-server
    labels:
        com.docker.compose.project: hotelflow_server
