backend/hotelflow_server/bridge/base/app-deployment.yaml
#! app-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app
    namespace: hotelflow-server
    labels:
        com.docker.compose.project: hotelflow_server
        com.docker.compose.service: app
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: hotelflow_server
            com.docker.compose.service: app
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: hotelflow_server
                com.docker.compose.service: app
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: laravel-app
                  image: hotelflow_server-app
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: app-8000
                      containerPort: 8000
                    - name: app-9000
                      containerPort: 9000
                  volumeMounts:
                    - name: var-www
                      mountPath: /var/www
            volumes:
                - name: var-www
                  hostPath:
                    path: C:\Users\szabo\Documents\GitHub\13_S1_2_vizsgaremek\backend\hotelflow_server
