backend/hotelflow_server/bridge/base/app-service.yaml
# check if there is at least one published port

#! app-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: app-published
    namespace: hotelflow-server
    labels:
        com.docker.compose.project: hotelflow_server
        com.docker.compose.service: app
spec:
    selector:
        com.docker.compose.project: hotelflow_server
        com.docker.compose.service: app
    ports:
        - name: app-8000
          port: 8000
          protocol: TCP
          targetPort: app-8000

# check if there is at least one published port
