backend/hotelflow_server/bridge/base/db-service.yaml
#! db-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: db-published
    namespace: hotelflow-server
    labels:
        com.docker.compose.project: hotelflow_server
        com.docker.compose.service: db
spec:
    selector:
        com.docker.compose.project: hotelflow_server
        com.docker.compose.service: db
    ports:
        - name: db-3306
          port: 3306
          protocol: TCP
          targetPort: db-3306
